Scroll effect needs to be fixed on mobile

--- a/client/src/Styles/DevUpdateScrollAnimation.css
+++ b/client/src/Styles/DevUpdateScrollAnimation.css
@@ -45,5 +45,11 @@
         position: relative;
         bottom: 100px;
     }
+
+    .marquee span {
+        display: inline-block;
+        padding-left: 100%;
+        animation: marquee 8s linear infinite;
+    }
   }
     
